update format file (W726)

--- a/formats/feminist_wave_stream_of_consciousness_past_future_complete.html
+++ b/formats/feminist_wave_stream_of_consciousness_past_future_complete.html
@@ -180,16 +180,10 @@
 </div>
 <h1 id="chapter-1">Chapter 1</h1>
 <h2 id="chapter-1-1">CHAPTER 1</h2>
-<p>The water is not a metaphor. It is a fact. It is the first fact, the
-one that comes before the memory of my mother’s voice or the taste of
-salt on skin. It is the taste of skin. It is the pressure against the
-drum of my ear, the cool slide through the webbing of my fingers, the
-green-gold light that fractures and reassembles above my head. I am
-seven. I am kicking. I am a body in the element that made it, and I am
-not thinking <em>I am a body</em>. I am just the kick, the reach, the
-turn of my head to breathe, the chlorine burn in my nose, the sound of
-my own blood in my ears, a steady <em>shush-shush</em> that is the
-water’s own heartbeat.</p>
+<p>Maya’s mother taught her to count the cracks in the ceiling plaster.
+One for the vote, two for the pill, three for the burning bra, four for
+the job she couldn’t keep. The fifth crack, the one shaped like a key,
+was for the daughter who would forget how they got there.</p>
 <p>My mother is a line of colour at the edge of the pool. A slash of
 terrycloth robe, a stripe of red hair. She is not watching me. She is
 reading a book. I know this because every time I turn my head to
